option java_package= "com.kael.req";
option java_outer_classname="ReqProto";

message LoginProto{
   optional string name = 1;
} 

message ReqPairingProto{}

message HeartBeatProto{}

message ReqActInGame{
   optional int32 action = 1;//0 rechoose/1 :fire
}